<resources>
    <string name="app_name">Project3</string>
    <string name="tempLabel">Temperature</string>
    <string name="conversionLabel">Conversion</string>
    <string name="celciusLabel">Temp in c</string>
    <string name="fLable">Temp in F</string>
    <string name="kLabel">Temp in K</string>
    <string name="convert">Convert</string>
    <string name="returnButton">Return</string>
    <string name="metric">Metric</string>
    <string name="meter">Meter</string>
    <string name="centimeter">Centimeter</string>
    <string name="kilometer">Kilometer</string>
</resources>
